--- a/exercise2/phonebook/package.json
+++ b/exercise2/phonebook/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
@@ -32,5 +33,6 @@
   },
   "devDependencies": {
     "json-server": "^0.15.1"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
